# netbox-lens

./: .gitignore  LICENSE  README.md  pyproject.toml
dev/: .gitignore  configuration.py  docker-compose.yaml  netbox.env.example
netbox_lens/: __init__.py  forms.py  navigation.py  template_content.py  urls.py  views.py
netbox_lens/backends/: __init__.py  base.py  netdisco.py
netbox_lens/templates/netbox_lens/: device_nodes_panel.html  search.html  search_results.html  status.html
